--- a/demo/src/main/resources/templates/menu.html
+++ b/demo/src/main/resources/templates/menu.html
@@ -3,11 +3,12 @@
     <div>
         <span sec:authorize="isAnonymous()">
             <a th:href="@{/login}">Login</a>
+            <a th:href="@{/urlap}">Űrlap küldés</a>
+            <a th:href="@{/eredmeny}">Űrlap ellenőrzés</a>
         </span>
         <span sec:authorize="isAuthenticated()">
             <a th:href="@{/home}">Home</a>
             <a th:href="@{/logout}">Logout</a>
-            <a th:href="@{/urlap}">Űrlap</a>
             <a th:href="@{/adatok}">Adatok</a>
         </span>
         <span sec:authorize="hasRole('ROLE_ADMIN')">
@@ -15,6 +16,7 @@
         </span>
         <span sec:authorize="isAnonymous()">
             <a th:href="@{/regisztral}">Regisztrál</a>
+
         </span>
     </div>
     <div sec:authorize="isAuthenticated()">
