--- a/demo/src/main/resources/templates/urlap.html
+++ b/demo/src/main/resources/templates/urlap.html
@@ -7,9 +7,11 @@
 <body>
 <div th:insert="menu"></div>
 <h1>Űrlap</h1>
-<form action="#" th:action="@{/feladat2}" th:object="${attr1}" method="post">
+<form action="#" th:action="@{/eredmeny}" th:object="${uzenet}" method="post">
   <p>Id: <input type="text" th:field="*{id}"></p>
+  <p th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></p>
   <p>Message: <input type="text" th:field="*{content}"></p>
+  <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></p>
   <p>Id: <input type="submit" value="Submit"/><input type="reset" value="Reset"/></p>
 </form>
 </body>
