--- a/demo/src/main/resources/templates/uzenetlista.html
+++ b/demo/src/main/resources/templates/uzenetlista.html
@@ -6,8 +6,10 @@
     <title>Title</title>
 </head>
 <body>
+<div th:insert="header"></div>
+<div th:insert="menu"></div>
 <div>
-    <a href="/uzenet">Új üzenet hozzáadása</a>
+    <h1>Üzenetek lekérése</h1>
     <table>
         <thead>
         <tr>
@@ -23,5 +25,6 @@
         </tbody>
     </table>
 </div>
+<div th:insert="footer"></div>
 </body>
 </html>
