--- a/demo/src/main/resources/templates/adatok.html
+++ b/demo/src/main/resources/templates/adatok.html
@@ -5,6 +5,10 @@
   <title>Adatok</title>
 </head>
 <body>
+<div th:insert="header"></div>
+  <div th:insert="menu"></div>
+  <h1>Tábla adatainak megjelenítése</h1>
   <p th:utext="${str}"></p>
+<div th:insert="footer"></div>
 </body>
 </html>
