--- a/demo/src/main/resources/templates/admin.html
+++ b/demo/src/main/resources/templates/admin.html
@@ -5,7 +5,9 @@
   <title>Admin Home</title>
 </head>
 <body>
+<div th:insert="header"></div>
 <div th:insert="menu"></div>
-<h1>Csak az Admin láthatja ezt az oldalt</h1>
+<h3>Csak az Admin láthatja ezt az oldalt</h3>
+<div th:insert="footer"></div>
 </body>
 </html>
