--- a/demo/src/main/resources/templates/menu.html
+++ b/demo/src/main/resources/templates/menu.html
@@ -1,15 +1,49 @@
-<div xmlns:th="http://www.thymeleaf.org"
+<!DOCTYPE html>
+
+<html xmlns:th="http://www.thymeleaf.org"
      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <div>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <style>
+            #menu {
+                border: 1px saddlebrown solid;
+                float: left;
+                width: 100%;
+                padding: 0;
+                margin: 0 0 1em 0;
+                font-size: 20px;
+                font-weight: bold;
+                color: white;
+                list-style-type: none;
+                background-color: #889bae;
+            }
+            #menu a{
+                float:left;
+                width:6em;
+                text-decoration:none;
+                color:white;
+                background-color:navy;
+                padding:0.2em 0.6em;
+                border-right:1px solid white;
+            }
+            #menu a:hover{
+
+            }
+
+        </style>
+    </head>
+    <body>
+    <div id="menu">
         <span sec:authorize="isAnonymous()">
             <a th:href="@{/login}">Login</a>
         </span>
         <span sec:authorize="isAuthenticated()">
-            <a th:href="@{/home}">Home</a>
-            <a th:href="@{/logout}">Logout</a>
+            <a th:href="@{/home}">Címlap</a>
             <a th:href="@{/adatok}">Adatok</a>
             <a th:href="@{/uzenet}">Üzenet küldés</a>
             <a th:href="@{/uzenetlista}">Üzenet</a>
+            <a th:href="@{/logout}">Logout</a>
         </span>
         <span sec:authorize="hasRole('ROLE_ADMIN')">
             <a th:href="@{/admin/home}">Admin</a>
@@ -22,4 +56,5 @@
     <div sec:authorize="isAuthenticated()">
         <h3>Welcome <span sec:authentication="principal.username">User</span></h3>
     </div>
-</div>
+</body>
+</html>
