--- a/demo/src/main/resources/templates/reghiba.html
+++ b/demo/src/main/resources/templates/reghiba.html
@@ -6,8 +6,10 @@
   <title>Regisztrációs hiba</title>
 </head>
 <body>
+<div th:insert="header"></div>
   <div th:insert="menu"></div>
   <h1 th:text="${uzenet}" />
-  <a href="/regisztral">Próbálja újra.</a>
+  <a href="/regisztral">A regisztráció nem sikerül! Próbálja újra.</a>
+<div th:insert="footer"></div>
 </body>
 </html>
