--- a/demo/src/main/resources/templates/user.html
+++ b/demo/src/main/resources/templates/user.html
@@ -5,7 +5,9 @@
   <title>User Home</title>
 </head>
 <body>
+<div th:insert="header"></div>
   <div th:insert="menu"></div>
-  <h1>Csak bejelentkezett felhasználó láthatja ezt az oldalt.</h1>
+  <h3>Kérem adatkérésre használja a menüpontokat.</h3>
+<div th:insert="footer"></div>
 </body>
 </html>
