--- a/demo/src/main/resources/templates/uzenet.html
+++ b/demo/src/main/resources/templates/uzenet.html
@@ -6,9 +6,13 @@
   <title>Title</title>
 </head>
 <body>
+<div th:insert="header"></div>
+<div th:insert="menu"></div>
+<h1>Üzenet küldése</h1>
 <form action="#" th:action="@{/reg_uzenet}" th:object="${reg}" method="post">
   <p>Üzenet: <input type="text" th:field="*{content}"/></p>
-  <p><input type="submit" value="Hozzáad" /></p>
+  <p><input type="submit" value="Küldés" /></p>
 </form>
+<div th:insert="footer"></div>
 </body>
 </html>
