--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -2,15 +2,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Home</title>
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 <div th:insert="header"></div>
 <div th:insert="menu"></div>
 <div>
     <h1>Üdvözöljük weboldalunkon</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, atque eaque fugit modi nesciunt quos ut! Animi exercitationem illum, ipsam labore magnam magni obcaecati officiis perspiciatis possimus quasi sint voluptates. Consectetur consequuntur expedita ipsa mollitia nisi nulla obcaecati quisquam sapiente suscipit unde. Architecto blanditiis deleniti dolores eligendi eveniet natus reiciendis!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet at consequuntur dolor et eum ex impedit perspiciatis porro repellat veniam.</p>
+    <h2>Kérem regisztrálja magát, hogy hozzáférjen a műveletekhez!</h2>
+    <br>
+    <h3>Elérhető műveletek:</h3>
+    <ul>
+        <li>Adatok: Adattáblák lekérése</li>
+        <li>Üzenet küldése: Üzenet küldés az Adminnak</li>
+        <li>Üzenetek: Üzenetek listázása</li>
+    </ul>
 </div>
 <div th:insert="footer"></div>
 </body>
