--- a/demo/src/main/resources/templates/admin.html
+++ b/demo/src/main/resources/templates/admin.html
@@ -7,7 +7,7 @@
 <body>
 <div th:insert="header"></div>
 <div th:insert="menu"></div>
-<h3>Csak az Admin láthatja ezt az oldalt</h3>
+<h3>Csak az Admin láthatja ezt az oldalt!</h3>
 <div th:insert="footer"></div>
 </body>
 </html>
