--- a/demo/src/main/resources/templates/footer.html
+++ b/demo/src/main/resources/templates/footer.html
@@ -20,6 +20,8 @@
 <footer>
   <div id="footer">
     <p>2022. Szoftver Karbantartás Kft.</p>
+    <a href="mailto:info@szoftverkarbantartas.hu">info@szoftverkarbantartas.hu/a></p>
+
   </div>
 </footer>
 </body>
