--- a/demo/src/main/resources/templates/header.html
+++ b/demo/src/main/resources/templates/header.html
@@ -6,7 +6,7 @@
   <style>
     #logo {
       width: 100%;
-      background-color: #889bae;
+      background-color: #768da3;
       height: 150px;
     }
     #logo p{
@@ -14,7 +14,7 @@
       text-align: center;
       font-family: 'Dancing Script', cursive;
       color: white;
-      font-size: 50px;
+      font-size: 51px;
       font-weight: bolder;
     }
   </style>
