--- a/demo/src/main/resources/templates/reghiba.html
+++ b/demo/src/main/resources/templates/reghiba.html
@@ -9,7 +9,7 @@
 <div th:insert="header"></div>
   <div th:insert="menu"></div>
   <h1 th:text="${uzenet}" />
-  <a href="/regisztral">A regisztráció nem sikerül! Próbálja újra.</a>
+  <a href="/regisztral">A regisztráció nem sikerül! Kérjük próbálja újra.</a>
 <div th:insert="footer"></div>
 </body>
 </html>
