--- a/demo/src/main/resources/templates/adatok.html
+++ b/demo/src/main/resources/templates/adatok.html
@@ -6,7 +6,7 @@
 <body>
 <div th:insert="header"></div>
   <div th:insert="menu"></div>
-  <h1>Tábla adatainak megjelenítése</h1>
+  <h1>Tábla adatainak megjelenítése:</h1>
   <p th:utext="${str}"></p>
 <div th:insert="footer"></div>
 </body>
