--- a/demo/src/main/resources/templates/regjo.html
+++ b/demo/src/main/resources/templates/regjo.html
@@ -7,7 +7,7 @@
 <body>
 <div th:insert="header"></div>
     <div th:insert="menu"></div>
-    <h2 th:utext="'A regisztrációja sikeres. <br/> Azonosítója: ' + ${id}" />
+    <h2 th:utext="'A regisztrációja sikeres! <br/> Azonosítója: ' + ${id}" />
 <div th:insert="footer"></div>
 </body>
 </html>
